--- a/pfirst/src/app/modal-user/modal-user.component.html
+++ b/pfirst/src/app/modal-user/modal-user.component.html
@@ -70,7 +70,7 @@
       <mat-spinner color="warn" diameter="30"></mat-spinner>
     </td>
     <td>
-      <span id="loadingText">Checking</span>
+      <span id="loadingText" style="color:white">Checking</span>
     </td>
   </tr>
 </table>
