--- a/pfirst/src/app/inscription/inscription.component.html
+++ b/pfirst/src/app/inscription/inscription.component.html
@@ -136,7 +136,7 @@
 
           <br>
           <br>
-          <button type="submit" class="btn btn-primary" disabled="invalid">C'est parti {{current_surname}}!
+          <button type="submit" class="btn btn-primary" [disabled]="f.invalid">C'est parti {{current_surname}}!
           </button>
           <i><p *ngIf="!f.valid" style="color:gray">Veuillez remplir tout les champs <span style="color:red">*</span>
           </p></i>
