--- a/pfirst/src/app/accompagner-single/accompagner-single.component.html
+++ b/pfirst/src/app/accompagner-single/accompagner-single.component.html
@@ -8,7 +8,7 @@
 
 <div *ngIf="myService" class="alert alert-dismissable alert-warning">
   <table align="center">
-    Il s'agit de <b>votre annonce</b>. <button class="btn btn-warning" (click)="router.navigate([''])">
+    Il s'agit de <b>votre annonce</b>. <button class="btn btn-warning" (click)="router.navigate(['activite'])">
     Voir</button>
   </table>
 </div>
