Modification des textes d'accueil

--- a/pfirst/src/app/app-view/app-view.component.html
+++ b/pfirst/src/app/app-view/app-view.component.html
@@ -32,9 +32,8 @@
               <td><img id="IneedCQ" src="../../assets/data/ACCUEIL/ineedCQ.png" alt=""></td>
             </tr>
             <tr>
-              <p id="textIn"> Autre absurdité, renouvelée du stoïcisme, et tous deux perpétuaient leur plaisanterie.
-                Sapristi, en voilà déjà un de mort. Chouette journée pour une petite gueuse ; et quant à ce que je compris
-                que j'avais remarquée.</p>
+              <p id="textIn" style="text-align: justify;font-size: larger;"> INeed est une plateforme de gestion de services ayant pour objectif de démocratiser l'entre aide et promouvoir la solidarité. Que vous
+              ayez besoin d'aide ou que vous souhaitiez rendre un service INeed est là pour vous accompagner.</p>
             </tr>
           </table>
         </td>
@@ -70,9 +69,8 @@
               <td><img id="tuveux" src="../../assets/data/ACCUEIL/tuVeux.png" alt="" ></td>
             </tr>
             <tr>
-              <p id="textTV"> Autre absurdité, renouvelée du stoïcisme, et tous deux perpétuaient leur plaisanterie.
-                Sapristi, en voilà déjà un de mort. Chouette journée pour une petite gueuse ; et quant à ce que je compris
-                que j'avais remarquée.</p>
+              <p id="textTV" style="text-align: justify; font-size: larger; width: 500px;"> De nombreuses personnes ont besoin d'aide en ce moment, tu veux les aider ? Clique sur le
+                jeton et découvre la dernière demande d'aide postée.</p>
             </tr>
           </table>
         </td>
