--- a/pfirst/src/app/service/service.component.html
+++ b/pfirst/src/app/service/service.component.html
@@ -13,9 +13,9 @@
           <div class="row no-gutters">
             <div class="col-md-2">
               <div class="text-left">
-                <p class="card-text"><small class="text-muted">Pour le :{{serviceDate}}</small></p>
+                <p class="card-text"><small>Pour le :{{serviceDate}}</small></p>
               </div>
-            </div> 
+            </div>
           <div class="col-md-10">
               <div class="text-right">
                 <a href="#" class="btn btn-primary"[routerLink]="[id]" >Voir l'annonce</a>
