correction format date, affichage ville pour tout service + typo

--- a/pfirst/src/app/cuisine-single/cuisine-single.component.html
+++ b/pfirst/src/app/cuisine-single/cuisine-single.component.html
@@ -46,6 +46,10 @@
         <td><h2>A faire chez lui ?</h2></td>
         <td>{{Sur_place}}</td>
       </tr>
+      <tr>
+        <td><h2>Ville: </h2></td>
+        <td>{{City}}</td>
+      </tr>
 
       <tr>
         <td><h2>Quand ?</h2></td>
