--- a/pfirst/src/app/menage-single/menage-single.component.html
+++ b/pfirst/src/app/menage-single/menage-single.component.html
@@ -72,7 +72,7 @@
       </tr>
       <tr>
         <td><h2>Ville: </h2></td>
-        <td>{{City}} -- {{Latitude}} -- {{Longitude}}</td>
+        <td>{{City}}</td>
       </tr>
       <tr>
         <td><div class="toast-header">
