--- a/pfirst/src/app/accompagner-single/accompagner-single.component.html
+++ b/pfirst/src/app/accompagner-single/accompagner-single.component.html
@@ -41,7 +41,10 @@
         <td><h2>Types d'accompagnement:</h2></td>
         <td>{{Kind}}</td>
 
-
+      <tr>
+        <td><h2>Ville: </h2></td>
+        <td>{{City}}</td>
+      </tr>
       <tr>
         <td><h2>Endroit ou accompagner</h2></td>
         <td>{{Local}}</td>
