--- a/pfirst/src/app/info-settings/info-settings.component.css
+++ b/pfirst/src/app/info-settings/info-settings.component.css
@@ -1,6 +1,7 @@
 #settingsContainer /*contains all html elems*/
 {
   width: 100%;
+  position: relative;
 }
 :host-context(.theme-dark) body{
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -10,6 +11,11 @@
   background-color: #2e2e2e;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-height: 100vh; /* will cover the 100% of viewport */
+  overflow: hidden;
+  display: block;
+  position: relative;
+  padding-bottom: 100px; /* height of your footer */
 }
 
 :host-context(.theme-light) body{
@@ -20,6 +26,12 @@
   background-color: whitesmoke;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-height: 100vh; /* will cover the 100% of viewport */
+  overflow: hidden;
+  display: block;
+  position: relative;
+  padding-bottom: 100px; /* height of your footer */
+  position: relative;
 }
 :host-context(.theme-dark) #jumb{
   background-color: #d2d2d2;
