--- a/pfirst/src/app/app-view/app-view.component.css
+++ b/pfirst/src/app/app-view/app-view.component.css
@@ -80,7 +80,7 @@
 }
 
 #pile{
-  width: 600px;
+  width: 100%;
 
 }
 #sep
@@ -89,7 +89,7 @@
 
 }
 #textIn{
-  width: 300px;
+  width: 100%;
 
 }
 
@@ -97,17 +97,17 @@
 
 #tuveux{
 
-  width: 500px;
+  width: 80%;
 }
 #jetCourse, #jetAccompagne, #jetCuisine, #jetMenage{
-  width: 750px;
+  width: 80%;
 }
 #aBesoin{
   font-size: large;
 
 }
 #textTV{
-  width: 300px;
+  width: 100%;
   text-align: right;
 }
 
