dimensionnement + handle notif vide

--- a/pfirst/src/app/app-view/app-view.component.html
+++ b/pfirst/src/app/app-view/app-view.component.html
@@ -33,7 +33,7 @@
             </tr>
             <tr>
               <td width="50%">
-              <p id="textIn" style="text-align: justify;font-size: larger;"> INeed est une plateforme de gestion de services ayant pour objectif de démocratiser l'entre aide et promouvoir la solidarité. Que vous
+              <p id="textIn" style="text-align: justify;font-size: 1vw; line-height: 2vh;"> INeed est une plateforme de gestion de services ayant pour objectif de démocratiser l'entre aide et promouvoir la solidarité. Que vous
               ayez besoin d'aide ou que vous souhaitiez rendre un service INeed est là pour vous accompagner.</p>
               </td>
             </tr>
@@ -72,7 +72,7 @@
             </tr>
             <tr>
               <td width="50%">
-              <p id="textTV" style="text-align: justify; font-size: larger;"> De nombreuses personnes ont besoin d'aide en ce moment, tu veux les aider ? Clique sur le
+              <p id="textTV" style="text-align: justify; font-size: 1vw; line-height: 2vh;"> De nombreuses personnes ont besoin d'aide en ce moment, tu veux les aider ? Clique sur le
                 jeton et découvre la dernière demande d'aide postée.</p>
               </td>
             </tr>
