ajustement footer info-settings

--- a/pfirst/src/app/info-settings/info-settings.component.html
+++ b/pfirst/src/app/info-settings/info-settings.component.html
@@ -1,4 +1,4 @@
-<body>
+<body style="min-height: 1800px;">
 <div id="settingsContainer">
   <div id="infoContainer">
     <div id="jumb" class="jumbotron jumbotron-fluid">
