--- a/pfirst/src/app/new-courses/new-courses.component.html
+++ b/pfirst/src/app/new-courses/new-courses.component.html
@@ -1,6 +1,6 @@
 <div id="jumb" class="jumbotron jumbotron-fluid">
 <div class="container">
-  <h1 class="display-4" align="center">Faire les courses</h1>
+  <h1 class="display-4" align="center">Pour les courses !</h1>
   <table align="center">
 
     <div class="col-sm-8 col-sm-offset-2">
@@ -12,11 +12,11 @@
         <!--#############DATE######################-->
         <div class="form-group">
             <div class="form-group">
-              <label for="datejour"><h2>Selectionnez une Date et une Heure <span style="color:red">*</span></h2>
+              <label for="datejour"><h2>Sélectionnez une date et une heure <span style="color:red">*</span></h2>
               </label>
-              <p>Jour</p>
+              <p>Jour :</p>
               <input type="date" id="datejour" class="form-control" formControlName="datejour" [min]="this.date" >
-              <p>Heure</p>
+              <p>Heure : </p>
                 <input type="time" id="dateheure" class="form-control" formControlName="dateheure" >
 
             </div>
@@ -43,7 +43,7 @@
 
           <!--#############LISTE DE COURSES######################-->
             <div class="form-group">
-              <label for="liste"><h2>Ajoutez un élément à la liste de course<span style="color:red">*</span></h2></label>
+              <label for="liste"><h2>Ajoutez un élément à la liste des courses<span style="color:red">*</span></h2></label>
 
               <form (ngSubmit)="ajouterListe(liste)" #liste="ngForm">
                 <table>
@@ -52,8 +52,8 @@
                     <td>Quantité</td>
                   </tr>
                   <tr>
-                    <td><input type="text" id="liste" name="liste_produit" class="form-control" ngModel></td>
-                    <td><input type="text" id="liste_quantite" name="liste_quantite" class="form-control" ngModel></td>
+                    <td><input type="text" id="liste" name="liste_produit" class="form-control" ngModel style= "width:170px;height: 100%;"></td>
+                    <td><input type="text" id="liste_quantite" name="liste_quantite" class="form-control" ngModel style= "width:70px;height: 100%;"></td>
                     <td>
                       <button type="submit" class="btn btn-secondary">Ajouter</button>
                     </td>
@@ -84,7 +84,7 @@
 
 
 
-            <label for ="ou" ><h2>Ou se ferra le service ? <span style="color:red">*</span></h2></label>
+            <label for ="ou" ><h2>Où se fera le service ? <span style="color:red">*</span></h2></label>
 
 
               <table width="100%" border="1" cellspacing="1" cellpadding="5" class="geoloc">
@@ -92,16 +92,16 @@
                 <tr>
 
                 <td> <div *ngIf="add===false  ">
-                  <button  type="button" id = "location-button"  (click)= "add=true;loca=false; map=false" class="btn btn-secondary" style= "width:100px;height: 100px;" >Avec votre adress</button>
+                  <button  type="button" id = "location-button"  (click)= "add=true;loca=false; map=false" class="btn btn-secondary" style= "width:100px;height: 100px;" >Avec votre adresse</button>
                 </div>
                 <div *ngIf="add===true && loca ===false ">
-                  <label for ="city" ><h3>Ville</h3></label>
+                  <label for ="city" ><h3>Ville : </h3></label>
                 <br>
               <input type="text" id="city" class="form-control" formControlName="city" placeholder="ex: Paris" >
               <br>
-              <label for ="adress" ><h3>Adresse</h3></label>
+              <label for ="adress" ><h3>Adresse :</h3></label>
               <br>
-              <input type="text" id="adress" class="form-control" formControlName="adress" placeholder="ex: avenue des Champs Elysee" style= "width:200px;height: 100%;">
+              <input type="text" id="adress" class="form-control" formControlName="adress" placeholder="ex: avenue des Champs Elysées" style= "width:200px;height: 100%;">
                 </div>
 
                 </td>
@@ -110,11 +110,11 @@
                 </td>
                 <td>
                   <div *ngIf="loca ===false ">
-                    <button  type="button" id = "location-button"  (click)= "loca=true; add=false" class="btn btn-secondary" >Avec votre geolocalisation</button>
+                    <button  type="button" id = "location-button"  (click)= "loca=true; add=false" class="btn btn-secondary" >Avec votre géolocalisation</button>
                   </div>
                   <div *ngIf="add===false && loca ===true ">
-                    <label for ="location" ><h3>Votre localisation</h3></label>
-                <button  type="button" id = "location-button"  (click)= "getLocation()" class="btn btn-secondary" >Appuyer</button>
+                   
+                <button  type="button" id = "location-button"  (click)= "getLocation()" class="btn btn-secondary" >Appuyez</button>
 
 
                   </div>
@@ -125,7 +125,7 @@
                 <td></td>
                 <td></td>
                 <td>
-                  <div *ngIf="map" style= "width:250px;height: 250px"> <app-mini-map [latitude]="this.info.latitude" [longitude]="this.info.longitude" [zoom]="12" ></app-mini-map></div>
+                  <div *ngIf="map" style= "width:250px;height: 250px"> <h3>Vous visualisez ce qui sera affiché sur l'annonce, cela vous convient ? <br> Sinon, écrivez votre adresse.</h3><app-mini-map [latitude]="this.info.latitude" [longitude]="this.info.longitude" [zoom]="12" ></app-mini-map></div>
                 </td>
 
                 </table>
@@ -134,7 +134,7 @@
 
           <!--#############COMMENTAIRES######################-->
             <div class="form group">
-              <label for="description"><h2>Commentaires ? <span style="color:red">*</span></h2></label>
+              <label for="description"><h2>Commentaire(s) ? <span style="color:red">*</span></h2></label>
               <!--<input type="text" id="description" class="form-control" formControlName="description"> -->
               <textarea class="form-control" aria-label="With textarea" id="description" class="form-control"
                         formControlName="description" placeholder="ex: Vous pourrez venir chez moi"></textarea>
