--- a/pfirst/src/app/new-cuisine/new-cuisine.component.css
+++ b/pfirst/src/app/new-cuisine/new-cuisine.component.css
@@ -1,7 +1,7 @@
 table,
 td {
     border: 0px solid #333;
-    width: 50;
+    width: 50%;
 }
 :host-context(.theme-dark) #jumb{
   background-color: grey;
