--- a/pfirst/src/app/new-cuisine/new-cuisine.component.html
+++ b/pfirst/src/app/new-cuisine/new-cuisine.component.html
@@ -1,16 +1,16 @@
 <div id="jumb" class="jumbotron jumbotron-fluid">
     <div class="container">
-      <h1 class="display-4" align="center">Faire la cuisine</h1>
+      <h1 class="display-4" align="center">Pour la cuisine !</h1>
         <table align="center">
             <div class="col-sm-8 col-sm-offset-2">
                 <form [formGroup]="cuisineForm" (ngSubmit)="onSubmitForm()" id="form">
 
                   <div class= "form-group">
-                    <label for="datejour"> <h2>Date et heure<span style="color:red">*</span></h2></label>
+                    <label for="datejour"><h2>Sélectionnez une date et une heure <span style="color:red">*</span></h2></label>
                     <br>
-                    <label for="datejour">Jour</label>
+                    <label for="datejour">Jour :</label>
                   <input type="date" id="datejour" class="form-control" formControlName="datejour" [min]="this.date" >
-                  <label for="dateheure">Heure</label>
+                  <label for="dateheure">Heure : </label>
                     <input type="time" id="dateheure" class="form-control" formControlName="dateheure" >
 
                   </div>
@@ -18,15 +18,26 @@
 
 
                   <div class= "form-group">
-                    <label for="sur_place"><h2>Chez vous ou a emporter ? <span style="color:red">*</span></h2></label>
+                    <label for="sur_place"><h2>Chez vous ou à emporter ? <span style="color:red">*</span></h2></label>
                     <select id="sur_place" class="form-control" formControlName="sur_place">
-                      <option value="Oui">Sur place, chez moi vous etes le bienvenue</option>
-                      <option value="Non">Je prefere que l'on me l'emporte</option>
+                      <option value="Oui">Sur place, chez moi vous êtes le bienvenue</option>
+                      <option value="Non">Je préfére que l'on me l'emporte</option>
+                    </select>
+                  </div>
+
+                  <div class= "form-group">
+                    <label for="type_plat"><h2>Quel type de plat souhaitez vous que la personne prepare ? <span style="color:red">*</span></h2></label>
+                    <select id="type_plat" class="form-control" formControlName="type_plat">
+                      <option value="entree">Entrée</option>
+                      <option value="plat">Plat</option>
+                      <option value="desser">Dessert</option>
+                      <option value="fast_food">Fastfood</option>
+                      <option value="autre">Autre</option>
                     </select>
                   </div>
 
 
-                  <label for ="ou" ><h2>Ou se ferra le service ? <span style="color:red">*</span></h2></label>
+                  <label for ="ou" ><h2>Où se fera le service ? <span style="color:red">*</span></h2></label>
 
                   <div class="form-group">
                     <table width="100%" border="1" cellspacing="1" cellpadding="5" class="geoloc">
@@ -34,16 +45,16 @@
                       <tr>
 
                       <td> <div *ngIf="add===false  ">
-                        <button  type="button" id = "location-button"  (click)= "add=true;loca=false;map=false" class="btn btn-secondary" style= "width:100px;height: 100px;" >Avec votre adress</button>
+                        <button  type="button" id = "location-button"  (click)= "add=true;loca=false;map=false" class="btn btn-secondary" style= "width:100px;height: 100px;" >Avec votre adresse</button>
                       </div>
                       <div *ngIf="add===true && loca ===false ">
-                        <label for ="city" ><h3>Ville</h3></label>
+                        <label for ="city" ><h3>Ville :</h3></label>
                       <br>
                     <input type="text" id="city" class="form-control" formControlName="city" placeholder="ex: Paris" >
                     <br>
-                    <label for ="adress" ><h3>Adresse</h3></label>
+                    <label for ="adress" ><h3>Adresse :</h3></label>
                     <br>
-                    <input type="text" id="adress" class="form-control" formControlName="adress" placeholder="ex: avenue des Champs Elysee" style= "width:200px;height: 100%;">
+                    <input type="text" id="adress" class="form-control" formControlName="adress" placeholder="ex: avenue des Champs Elysées" style= "width:200px;height: 100%;">
                       </div>
 
                       </td>
@@ -52,10 +63,10 @@
                       </td>
                       <td>
                         <div *ngIf="loca ===false ">
-                          <button  type="button" id = "location-button"  (click)= "loca=true; add=false" class="btn btn-secondary" >Avec votre geolocalisation</button>
+                          <button  type="button" id = "location-button"  (click)= "loca=true; add=false" class="btn btn-secondary" >Avec votre géolocalisation</button>
                         </div>
                         <div *ngIf="add===false && loca ===true ">
-                          <label for ="location" ><h3>Votre localisation</h3></label>
+                          
                       <button  type="button" id = "location-button"  (click)= "getLocation()" class="btn btn-secondary" >Appuyer</button>
 
 
@@ -67,7 +78,7 @@
                       <td></td>
                       <td></td>
                       <td>
-                        <div *ngIf="map" style= "width:250px;height: 250px"> <app-mini-map [latitude]="this.info.latitude" [longitude]="this.info.longitude" ></app-mini-map></div>
+                        <div *ngIf="map" style= "width:250px;height: 250px"><h3>Vous visualisez ce qui sera affiché sur l'annonce, cela vous convient ? <br> Sinon, écrivez votre adresse.</h3> <app-mini-map [latitude]="this.info.latitude" [longitude]="this.info.longitude" ></app-mini-map></div>
                       </td>
 
                       </table>
@@ -86,19 +97,10 @@
 
 
 
-                  <div class= "form-group">
-                    <label for="type_plat"><h2>Quel type de plat souhaitez vous que la personne prepare ? <span style="color:red">*</span></h2></label>
-                    <select id="type_plat" class="form-control" formControlName="type_plat">
-                      <option value="entree">Entree</option>
-                      <option value="plat">Plat</option>
-                      <option value="desser">Dessert</option>
-                      <option value="fast_food">Fastfood</option>
-                      <option value="autre">Autre</option>
-                    </select>
-                  </div>
+                  
 
                   <div class="form group">
-                    <label for ="description"> <h2>Commentaires ? <span style="color:red">*</span></h2></label>
+                    <label for ="description"> <h2>Commentaire(s) ? <span style="color:red">*</span></h2></label>
                     <!--<input type="text" id="description" class="form-control" formControlName="description"> -->
                     <textarea class="form-control" aria-label="With textarea" id="description" class="form-control" formControlName="description" placeholder="ex: Vous pourrez venir chez moi"></textarea>
                   </div>
